2008-09-16  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* data/cairo-compmgr.schemas.in:
	* src/ccm-config.c (ccm_config_get_color):
	* src/ccm-screen.c (ccm_screen_update_background),
	(ccm_screen_on_option_changed):
	* src/ccm.h:
      Add background color and background pixmap position.

2008-09-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* configure.ac:
	* data/cairo-compmgr.schemas.in:
	* plugins/freeze/ccm-freeze.c (ccm_freeze_on_event),
	(ccm_freeze_ping), (ccm_freeze_paint), (ccm_freeze_map),
	(ccm_freeze_add_window):
	* plugins/magnifier/ccm-magnifier.c (ccm_magnifier_screen_paint),
	(ccm_magnifier_window_paint):
	* plugins/mosaic/ccm-mosaic.c (ccm_mosaic_recalc_coords),
	(ccm_mosaic_send_leave_event), (ccm_mosaic_send_enter_event),
	(ccm_mosaic_on_event), (ccm_mosaic_on_key_press),
	(ccm_mosaic_get_damaged_area), (ccm_mosaic_paint_area),
	(ccm_mosaic_screen_paint), (ccm_mosaic_window_paint):
	* plugins/opacity/ccm-opacity.c
	(ccm_opacity_on_increase_key_press),
	(ccm_opacity_on_decrease_key_press):
	* plugins/perf/ccm-perf.c (ccm_perf_window_paint):
	* plugins/shadow/ccm-shadow.c (ccm_shadow_check_needed),
	(ccm_shadow_need_shadow), (ccm_shadow_set_opaque_region):
	* src/ccm-config.c (ccm_config_new):
	* src/ccm-debug.c (ccm_log_region):
	* src/ccm-debug.h:
	* src/ccm-display.h:
	* src/ccm-drawable.c (ccm_drawable_set_property),
	(ccm_drawable_get_property), (ccm_drawable_init),
	(ccm_drawable_finalize), (ccm_drawable_class_init),
	(__ccm_drawable_query_geometry), (ccm_drawable_get_visual),
	(ccm_drawable_get_depth), (ccm_drawable_get_format),
	(ccm_drawable_get_xid), (ccm_drawable_query_geometry),
	(ccm_drawable_damage_region), (ccm_drawable_get_surface),
	(ccm_drawable_create_context):
	* src/ccm-drawable.h:
	* src/ccm-image.c (ccm_image_get_sub_image):
	* src/ccm-pixmap-buffered-image.c (ccm_pixmap_buffered_image_sync):
	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_class_init),
	(ccm_pixmap_glitz_create_gl_drawable), (ccm_pixmap_glitz_bind),